Assert Page Is Loaded pattern has been changed

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
 				<configuration>
+					<includes>
+						<include>com/youtube/suites/SearchFeatureSuite.java</include>
+					</includes>
 					<testFailureIgnore>false</testFailureIgnore>
 					<argLine>
 						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
