--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -82,6 +86,10 @@
 							<name>listener</name>
 							<value>io.qameta.allure.junit5.AllureJunit5</value>
 						</property>
+						<configurationParameters>
+							junit.jupiter.execution.parallel.enabled=true
+							junit.jupiter.execution.parallel.mode.default=concurrent
+						</configurationParameters>
 					</properties>
 				</configuration>
 				<dependencies>
