--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<aspectj.version>1.9.9.1</aspectj.version>
-		<selenide.version>6.4.0</selenide.version>
+		<selenide.version>7.5.1</selenide.version>
 		<allure.version>2.18.1</allure.version>
+		<webdrivermanager.version>5.9.2</webdrivermanager.version>
 	</properties>
 
 	<dependencies>
@@ -33,7 +34,13 @@
 		<dependency>
 			<groupId>com.codeborne</groupId>
 			<artifactId>selenide</artifactId>
-			<version>6.4.0</version>
+			<version>${selenide.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>${webdrivermanager.version}</version>
 		</dependency>
 
 		<dependency>
